--- a/webflux-api/pom.xml
+++ b/webflux-api/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.axellbrendow</groupId>
+	<groupId>br.com.marcusPrado02</groupId>
 	<artifactId>dio-stock-quotes-webflux-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>dio-stock-quotes-webflux-api</name>
